k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: preview
  labels:
    app: ai-studio-preview
